tests/typechecking/valid/let sub array.ml
let arr = Array.create in let x = 1 in let y = 2 in arr.(0)<-x;
print_int(arr.(0)-arr.(1))
