tests/typechecking/invalid/array-create int float.ml
let v1 = Array.create 1 1 in
let v2 = Array.create 1 1.2 in
print_int v1;
print_int v2


